--- a/jmail/build.gradle
+++ b/jmail/build.gradle
@@ -30,8 +30,9 @@ dependencies {
   implementation files("$lts_prov")
   implementation files("$lts_util")
   implementation files("$lts_pkix")
+    implementation project(path: ':core')
 
-  java9Implementation project(':prov')
+    java9Implementation project(':prov')
   java9Implementation project(':util')
   java9Implementation project(':pkix')
   java9Implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.0.1'
