--- a/mail/build.gradle
+++ b/mail/build.gradle
@@ -23,8 +23,9 @@ dependencies {
   implementation files("$lts_prov")
   implementation files("$lts_util")
   implementation files("$lts_pkix")
+    implementation project(path: ':core')
 
-  java9Implementation project(':prov')
+    java9Implementation project(':prov')
   java9Implementation project(':util')
   java9Implementation project(':pkix')
   java9Implementation files(sourceSets.main.output.classesDirs) {
