Updated java test task for all projects.

--- a/build.gradle
+++ b/build.gradle
@@ -268,6 +268,9 @@ subprojects {
         exclude('**/pqc/**')
       }
     }
+
+    jvmArgs '-Dorg.bouncycastle.bks.enable_v1=true','-Dtest.bclts.ignore.native=sha,gcm,cbc,ecb,es,cfb,ctr,ccm', '-Dorg.bouncycastle.native.cpu_variant=java'
+
   }
 
 
