--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -4,6 +4,10 @@ import java.nio.file.Paths
 import java.nio.file.StandardCopyOption
 import static ExtraFunctions.*
 
+plugins {
+  id "biz.aQute.bnd.builder" version "7.0.0"
+}
+
 jar.archiveBaseName = "bcprov-lts$vm_range"
 
 sourceSets {
@@ -47,6 +51,8 @@ dependencies {
   }
 }
 
+// apply plugin: "biz.aQute.bnd.builder"
+
 compileJava {
   javaCompiler = javaToolchains.compilerFor {
     languageVersion = JavaLanguageVersion.of(8)
@@ -87,6 +93,9 @@ jar {
     from sourceSets.java15.output
   }
   manifest.attributes('Multi-Release': 'true')
+  manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
+  manifest.attributes('Export-Package': 'org.bouncycastle.*')
+  manifest.attributes('Import-Package': 'java.*;resolution:=optional;javax.*;resolution:=optional')
 }
 
 task sourcesJar(type: Jar) {
@@ -143,7 +152,4 @@ test {
 
 
     jvmArgs '-Dorg.bouncycastle.bks.enable_v1=true','-Dtest.bclts.ignore.native=sha,gcm,cbc,ecb,es,cfb,ctr,ccm', '-Dorg.bouncycastle.native.cpu_variant=java'
-
-
-
 }
