--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,7 +17,10 @@ test {
     testLogging.showStackTraces = true
 
 
-   jvmArgs '-Dorg.bouncycastle.bks.enable_v1=true','-Dtest.bclts.ignore.native=sha,gcm,gcmsiv,cbc,ecb,es,cfb,ctr,ccm,sha512,sha224,sha384,sha3,shake', '-Dorg.bouncycastle.native.cpu_variant=java'
+   jvmArgs '-Dorg.bouncycastle.expected_jvm=1.8',
+           '-Dorg.bouncycastle.bks.enable_v1=true',
+           '-Dtest.bclts.ignore.native=sha,gcm,gcmsiv,cbc,ecb,es,cfb,ctr,ccm,sha512,sha224,sha384,sha3,shake',
+           '-Dorg.bouncycastle.native.cpu_variant=java'
 
     filter {
         includeTestsMatching "AllTest*"
