--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15
 version=2.73.4-SNAPSHOT
 org.gradle.jvmargs=-Xmx2g
+org.gradle.parallel=false
 
