--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,14 @@ plugins {
   id "java"
 }
 
+println("Environment setup:")
+["LTS_JDK8", "LTS_JDK11", "LTS_JDK15"].each({ it ->
+  println("Looking for JDK ENV '${it}' found  ${System.getenv(it)}");
+  if (System.getenv(it) == null) {
+    throw new RuntimeException("Looking for JDK ENV '${it}' but found null, see README 'Environmental variables'");
+  }
+})
+
 
 if (JavaVersion.current().isJava8Compatible())
 {
