Updated version numbers

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15
-version=2.73.4-SNAPSHOT
+version=2.73.4
 org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=false
 
