--- a/pg/build.gradle
+++ b/pg/build.gradle
@@ -58,7 +58,7 @@ jar {
   }
   manifest.attributes('Multi-Release': 'true')
   manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
-  manifest.attributes('Export-Package': 'org.bouncycastle.*')
+  manifest.attributes('Export-Package': 'org.bouncycastle.{apache|bcpg|gpg|openpgp}.*')
   manifest.attributes('Import-Package': 'java.*;resolution:=optional;javax.*;resolution:=optional;org.bouncycastle.*;version="[2.73,4)"')
 }
 
