Added stanza to force set debug builds.

--- a/build.gradle
+++ b/build.gradle
@@ -462,6 +462,10 @@ subprojects {
         reportsDirectory = layout.buildDirectory.dir("jacoco")
     }
 
+    tasks.withType(JavaCompile).configureEach {
+        options.debug = false;
+    }
+
 }
 
 
